finished lenses routes and controller
